# android-rust-template-app

./: .gitignore  .pre-commit-config.yaml  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/os/androidrusttemplate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/os/androidrusttemplate/: MainActivity.kt
app/src/main/java/com/os/androidrusttemplate/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/os/androidrusttemplate/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rustlib/: .gitignore  Cargo.toml  build-debug.sh  build-release.sh
rustlib/src/: lib.rs
