[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = "0.13.3"
jni = "0.21.1"
log = "0.4.20"
ndk = "0.7.0"
ndk-sys = "0.4.1"

[lib]
crate-type = ["cdylib"]
name = "rustlib"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
